--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=customer-management-api
+customer.file.path=src/main/resources/customers.txt
+
+#Logging
+logging.level.root=info
+logging.level.com.rsystems.customer.management=debug
