NEM: fixed a potential bug related to customer creation and updating

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ customer.file.path=src/main/resources/customers.txt
 #Logging
 logging.level.root=info
 logging.level.com.rsystems.customer.management=debug
+
+spring.jackson.deserialization.fail-on-unknown-properties=true
