--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=customer-management-api
+server.port=8080
+
 customer.file.path=src/main/resources/customers.txt
 
 #Logging
